--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -7,5 +7,21 @@
 </html>
 <body>
   <h1>dashboard</h1>  
-</aobr>
+  <!-- คือ tag list-->
+  <!-- #status คือการลิ้งไปที่ tag ที่มี id status -->
+    <li><a href="#status">status</a></li>
+    <li><a href="data">data</a><li>
+  <!--lorem500 -->
+  <p>
+   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ut facere atque accusantium assumenda rerum labore, voluptatem quaerat accusamus molestias. Corrupti dolorum, distinctio cupiditate tempora quia atque vero repellendus repellat.
+  </p>
+  <h1 id="status">status</h1>
+  <!-- lorem100 -->
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo harum distinctio dolorum accusantium, minima facere. Voluptatem quam, in corrupti quibusdam distinctio nam? Natus maxime exercitationem repellat beatae, asperiores eaque culpa.</p>
+  <h1 id="data">data</h1>
+  <!-- lorem100 -->
+  <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos esse nemo laudantium provident voluptatum laborum eos! Doloribus commodi, voluptatum alias dignissimos libero labore iste voluptate qui! Aliquid molestiae a eos.</P>
+  <!-- #dashboard คือการอ้างถึง id ชื่อ dashboard-->
+  <a href="#dashboard">go to Top</a>
+</body>
 </html>
