--- a/pages/form.html
+++ b/pages/form.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Input Form</h1>
-    <form action="#">
+    <form action="submit.php" method="post">
     <table>
 <tr>
     <td><label for="name">Name</label></td>
@@ -44,13 +44,13 @@
 <tr>
     <td><label for="sign">Single Sign-on to the following: </label></td>
 <td>
-    <input type="checkbox" name="sign" id="email">Mail<br>
-    <input type="checkbox" name="sign" id="payroll">Payroll<br>
-    <input type="checkbox" name="sign" id="selfservice">Self-service<br>
-    </td>
-</tr>
-<tr>
-    <td style="text-align: center;" colspan="2">
+    <input type="checkbox" name="sign1" id="mail"value="Mail">Mail<br>
+    <input type="checkbox" name="sign2" id="payroll" value="Payroll">br>
+    <input type="checkbox" name="sign3" id="selfservice" value=">Self-service>br>
+td>
+>
+
+    d style="text-align: center; colspan="2">
     <input type="submit" value="Login">
     <input type="button" value="Reset">
     </td>
